src/main/java/com/example/security/jwtdemo/JwtAuthEntryPoint.java
package com.example.security.jwtdemo;

import jakarta.servlet.ServletException;
import jakarta.servlet.http.HttpServletRequest;
import jakarta.servlet.http.HttpServletResponse;
import org.slf4j.Logger;
import org.slf4j.LoggerFactory;
import org.springframework.http.MediaType;
import org.springframework.security.core.AuthenticationException;
import org.springframework.security.web.AuthenticationEntryPoint;
import org.springframework.stereotype.Component;
import tools.jackson.databind.ObjectMapper;

import java.io.IOException;
import java.util.HashMap;
import java.util.Map;

@Component
public class JwtAuthEntryPoint implements AuthenticationEntryPoint {

    private static final Logger logger = LoggerFactory.getLogger(JwtAuthEntryPoint.class);
    @Override
    public void commence(HttpServletRequest request,
                         HttpServletResponse response,
                         AuthenticationException authException)
            throws IOException, ServletException {
        logger.error("Unauthorized error: {}", authException.getMessage());
        response.setContentType(MediaType.APPLICATION_JSON_VALUE); // set content type to Json
        response.setStatus(HttpServletResponse.SC_UNAUTHORIZED); // set status code
        
        final Map<String, Object> body = new HashMap<>(); // Json body
        body.put("status", HttpServletResponse.SC_UNAUTHORIZED); // add status
        body.put("error", "Unauthorized"); // error
        body.put("message", authException.getMessage()); // setting message
        body.put("path", request.getServletPath()); // path

        final ObjectMapper mapper = new ObjectMapper();
        mapper.writeValue(response.getOutputStream(), body);
    }
}
